Add links to lib-rules-parse-ruby

--- a/public/index.html
+++ b/public/index.html
@@ -34,13 +34,21 @@
     <!-- credits -->
     <p>
       <!--a href="https://ryanfleck.ca" rel="nofollow" target="_blank"> Ryan</a-->
-      Source code on GitHub at
+      Source code on GitHub for
       <a
         href="https://github.com/RyanFleck/xalgo-parse-api"
         rel="nofollow"
         target="_blank"
       >
-        xalgo-parse-api
+        api
+      </a>
+      and
+      <a
+        href="https://github.com/Xalgorithms/lib-rules-parse-ruby"
+        rel="nofollow"
+        target="_blank"
+      >
+        parser
       </a>
     </p>
     <script src="app.js" type="text/javascript"></script>
